Fix, not fit

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -20,7 +20,7 @@ nav,
 section {
   display: block;
 }
-.efit {
+.efix {
 position: relative; bottom: 7px; left: 15px
 }
 audio,
